--- a/DFOptimizerApp/app/src/main/res/layout/activity_home_screen.xml
+++ b/DFOptimizerApp/app/src/main/res/layout/activity_home_screen.xml
@@ -9,15 +9,16 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="270dp"
-        android:layout_height="75dp"
+        android:layout_width="346dp"
+        android:layout_height="100dp"
         android:layout_marginStart="54dp"
         android:layout_marginLeft="54dp"
-        android:layout_marginTop="45dp"
+        android:layout_marginTop="30dp"
         android:layout_marginEnd="54dp"
         android:layout_marginRight="54dp"
         app:layout_constraintBottom_toTopOf="@+id/scrollView3"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.484"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/logo" />
@@ -30,7 +31,7 @@
         android:layout_marginLeft="56dp"
         android:layout_marginEnd="56dp"
         android:layout_marginRight="56dp"
-        android:layout_marginBottom="70dp"
+        android:layout_marginBottom="30dp"
         android:background="@drawable/custom_rounded_corners"
         android:backgroundTint="#4ab9f5"
         android:fontFamily="@font/klaptbold"
@@ -45,11 +46,13 @@
 
     <ScrollView
         android:id="@+id/scrollView3"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="410dp"
+        android:layout_height="401dp"
         android:layout_marginBottom="7dp"
+        android:layout_marginTop="40dp"
         app:layout_constraintBottom_toTopOf="@+id/customizeBtn"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView">
 
@@ -62,85 +65,133 @@
                 android:id="@+id/textView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="NBA Lineup - DraftKings:"
+                android:text=" NBA Lineup - DraftKings:"
+                android:textSize="20sp"
+                android:layout_marginLeft="10dp"
                 android:textColor="#4ab9f5"
                 tools:layout_editor_absoluteX="40dp"
                 tools:layout_editor_absoluteY="161dp" />
 
             <Spinner
                 android:id="@+id/nba_dk_lineup"
-                android:layout_width="410dp"
-                android:layout_height="100dp" />
+                android:layout_width="match_parent"
+                android:layout_height="91dp"
+                android:backgroundTint="#ffffff"
+                android:foregroundTint="#ffffff"
+                android:layout_marginRight="20dp"
+                android:layout_marginLeft="20dp"
+                android:textColor="@color/white"
+                android:theme="@style/spinnerTheme" />
 
             <TextView
                 android:id="@+id/textView10"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text=" NBA Lineup - FanDuel:"
+                android:textSize="20sp"
+                android:layout_marginLeft="10dp"
                 android:textColor="#4ab9f5"
                 tools:layout_editor_absoluteX="40dp"
                 tools:layout_editor_absoluteY="309dp" />
 
             <Spinner
                 android:id="@+id/nba_fd_lineup"
-                android:layout_width="410dp"
-                android:layout_height="100dp" />
+                android:layout_width="370dp"
+                android:layout_height="85dp"
+                android:layout_marginLeft="20dp"
+                android:backgroundTint="#ffffff"
+                android:foregroundTint="#ffffff"
+                android:layout_marginRight="20dp"
+                android:textColor="@color/white"
+                android:theme="@style/spinnerTheme" />
 
             <TextView
                 android:id="@+id/textView6"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="NFL Lineup - DraftKings:"
+                android:text=" NFL Lineup - DraftKings:"
+                android:textSize="20sp"
+                android:layout_marginLeft="10dp"
                 android:textColor="#4ab9f5"
                 tools:layout_editor_absoluteX="40dp"
                 tools:layout_editor_absoluteY="227dp" />
 
             <Spinner
                 android:id="@+id/nfl_dk_lineup"
-                android:layout_width="410dp"
-                android:layout_height="100dp" />
+                android:layout_width="371dp"
+                android:layout_height="95dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:backgroundTint="#ffffff"
+                android:foregroundTint="#ffffff"
+                android:textColor="@color/white"
+                android:theme="@style/spinnerTheme" />
 
             <TextView
                 android:id="@+id/textView9"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text=" NFL Lineup - FanDuel:"
+                android:textSize="20sp"
+                android:layout_marginLeft="10dp"
                 android:textColor="#4ab9f5"
                 tools:layout_editor_absoluteX="40dp"
                 tools:layout_editor_absoluteY="309dp" />
 
             <Spinner
                 android:id="@+id/nfl_fd_lineup"
-                android:layout_width="410dp"
-                android:layout_height="100dp" />
+                android:layout_width="371dp"
+                android:layout_height="97dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:backgroundTint="#ffffff"
+                android:foregroundTint="#ffffff"
+                android:textColor="@color/white"
+                android:theme="@style/spinnerTheme" />
 
             <TextView
                 android:id="@+id/textView7"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text=" MLB Lineup - DraftKings:"
+                android:textSize="20sp"
+                android:layout_marginLeft="10dp"
                 android:textColor="#4ab9f5"
                 tools:layout_editor_absoluteX="40dp"
                 tools:layout_editor_absoluteY="309dp" />
 
             <Spinner
                 android:id="@+id/mlb_dk_lineup"
-                android:layout_width="410dp"
-                android:layout_height="100dp" />
+                android:layout_width="371dp"
+                android:layout_height="92dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:backgroundTint="#ffffff"
+                android:foregroundTint="#ffffff"
+                android:textColor="@color/white"
+                android:theme="@style/spinnerTheme" />
 
             <TextView
                 android:id="@+id/textView8"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text=" MLB Lineup - FanDuel:"
+                android:textSize="20sp"
+                android:layout_marginLeft="10dp"
                 android:textColor="#4ab9f5"
                 tools:layout_editor_absoluteX="40dp"
                 tools:layout_editor_absoluteY="309dp" />
 
             <Spinner
                 android:id="@+id/mlb_fd_lineup"
-                android:layout_width="410dp"
-                android:layout_height="100dp" />
+                android:layout_width="372dp"
+                android:layout_height="90dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:backgroundTint="#ffffff"
+                android:foregroundTint="#ffffff"
+                android:textColor="@color/white"
+                android:theme="@style/spinnerTheme" />
         </LinearLayout>
     </ScrollView>
 
