--- a/DFOptimizerApp/app/src/main/res/layout/activity_choose_site.xml
+++ b/DFOptimizerApp/app/src/main/res/layout/activity_choose_site.xml
@@ -60,11 +60,19 @@
         android:id="@+id/textView9"
         android:layout_width="189dp"
         android:layout_height="43dp"
+        android:layout_marginStart="111dp"
+        android:layout_marginLeft="111dp"
+        android:layout_marginTop="100dp"
+        android:layout_marginEnd="111dp"
+        android:layout_marginRight="111dp"
+        android:layout_marginBottom="618dp"
         android:fontFamily="@font/klaptbold"
         android:text="Select a Site"
         android:textColor="#ffffff"
         android:textSize="32sp"
-        tools:layout_editor_absoluteX="111dp"
-        tools:layout_editor_absoluteY="70dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
